--- a/src/components/Quiz/style.css
+++ b/src/components/Quiz/style.css
@@ -6,3 +6,24 @@
     background-color: red;
     color: white;
 }
+.quiz {
+    background-color: white;
+    max-width: 600px;
+    text-align: center;
+    margin: 0 auto;
+    border-radius: 20px;
+    box-shadow: 5px 10px 18px #888;
+    overflow: auto;
+    margin-bottom: 25px;
+}
+
+.quiz-question {
+    background-color: #262626;
+    color: #8e8e8e;
+    padding: 1px;
+}
+
+.question-btn {
+    margin: 0 20px;
+    border-radius: 20px;
+}
